Add prevent default to button